# crust-of-rust

atomics-and-memory-ordering/: Cargo.toml
atomics-and-memory-ordering/src/: main.rs
channels/src/: lib.rs
concurrent-hashmap/: Cargo.toml  ConcurrentHashmap.java
concurrent-hashmap/src/: lib.rs
declarative-macros/src/: lib.rs
design-patterns/src/: lib.rs
dispatch-and-fat-pointers/: Cargo.toml
dispatch-and-fat-pointers/src/: lib.rs
drop-check/src/: main.rs
functions-closures-and-traits/: Cargo.toml
iterators/src/: lib.rs
lifetimes/src/: lib.rs
pinning/src/: pseudocode.txt
procedural-macros/: Cargo.toml  test.rs
procedural-macros/src/: lib.rs
send-and-sync/src/: lib.rs
smart-pointers-and-interior-mutability/src/: lib.rs
subtyping-and-variance/src/: lib.rs
