[package]
name = "procedural-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[[bin]]
name = "test"
path = "./test.rs"

## See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.33"
syn = { version = "2.0.43", features = ["extra-traits"] }
